Bug 241823 - Crash under WebCore::DataDetection::detectContentInRange()
Summary: Crash under WebCore::DataDetection::detectContentInRange()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-21 15:49 PDT by Chris Dumez
Modified: 2022-06-22 08:17 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2022-06-21 15:49:24 PDT
Crash under WebCore::DataDetection::detectContentInRange():
Thread 0 Crashed ↩::   Dispatch queue: com.apple.main-thread
0   WebCore                       	       0x1a32ac780 WebCore::DataDetection::detectContentInRange(WebCore::SimpleRange const&, WTF::OptionSet<WebCore::DataDetectorType>, NSDictionary*) + 2724 (Source/WebCore/dom/Node.h:800)
1   WebCore                       	       0x1a32ac6f0 WebCore::DataDetection::detectContentInRange(WebCore::SimpleRange const&, WTF::OptionSet<WebCore::DataDetectorType>, NSDictionary*) + 2580 (Source/WebCore/./editing/cocoa/DataDetection.mm:502)
2   WebCore                       	       0x1a469adcc WebCore::FrameLoader::checkLoadCompleteForThisFrame() + 1784 (Source/WebCore/./loader/FrameLoader.cpp:2612)
3   WebCore                       	       0x1a468f190 WebCore::FrameLoader::checkLoadComplete() + 244 (Source/WebCore/./loader/FrameLoader.cpp:2773)
Comment 1 Chris Dumez 2022-06-21 15:49:34 PDT
<rdar://95110928>
Comment 2 Chris Dumez 2022-06-21 15:57:10 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1662
Comment 3 EWS 2022-06-22 08:16:57 PDT
Committed r295730 (251735@main): <https://commits.webkit.org/251735@main>

Reviewed commits have been landed. Closing PR #1662 and removing active labels.